# llm-fandom

./: .env.example  .gitignore  ARCHITECTURE.md  CHECKLIST.md  GETTING_STARTED.md  IMPLEMENTATION_REPORT.md  LICENSE  PROJECT_SUMMARY.md  README.md  TROUBLESHOOTING.md  pyproject.toml
config/: azure_config.yaml  default_config.yaml
config/prompts/: entity_extraction.jinja2  wiki_generation.jinja2
examples/: sample_story.txt
src/wiki_generator/: __init__.py  cli.py
src/wiki_generator/core/: __init__.py  config.py  models.py  pipeline.py
src/wiki_generator/extraction/: __init__.py  entity_extractor.py  schemas.py
src/wiki_generator/generation/: __init__.py  wiki_generator.py
src/wiki_generator/images/: __init__.py  pipeline.py
src/wiki_generator/images/strategies/: __init__.py
src/wiki_generator/llm/: __init__.py  orchestrator.py
src/wiki_generator/llm/providers/: __init__.py  anthropic_provider.py  azure_openai_provider.py  base.py  openai_provider.py
src/wiki_generator/parsers/: __init__.py  base.py  pdf_parser.py  text_parser.py  web_parser.py
src/wiki_generator/storage/: __init__.py  database.py  repository.py
tests/: __init__.py  conftest.py  test_models.py
