[project]
name = "wiki-generator"
version = "0.1.0"
description = "AI-powered wiki generator from any content source"
authors = [{name = "Wiki Generator Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    # Content Parsing
    "pdfplumber>=0.10",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.6",
    "requests>=2.31",
    # LLM Integration
    "anthropic>=0.18",
    "openai>=1.12",
    "litellm>=1.30",
    "instructor>=0.6",
    "tenacity>=8.2",
    # Image Processing
    "pillow>=10.0",
    "pdf2image>=1.16",
    "duckduckgo-search>=4.0",
    # Static Site
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.7",
    # Storage
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    # Utilities
    "aiohttp>=3.9",
    "loguru>=0.7",
    "asyncio>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.12",
    "black>=23.12",
    "ruff>=0.1",
    "mypy>=1.8",
]

[project.scripts]
wiki-generator = "wiki_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
